--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <h2 class="heading">My <span>Experience</span></h2>
             <p class="desc">
               Throughout my academic journey, I have actively sought opportunities to apply my technical knowledge while developing essential professional skills
+            </p>
               <div class="resume-list">
                 <div class="resume-item">
                   <a href="#" data-modal="experienceModal1">
@@ -198,7 +199,7 @@
           <div class="resume-detail organization">
             <h2 class="heading">My <span>Organizational & Volunteer</span></h2>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. blablablabsljdh ashdoahisfaps ya
+              Throughout my community involvement, I have actively engaged in various organizations and volunteer work, allowing me to develop leadership abilities while making meaningful contributions to different communities
             </p>
             <div class="resume-list">
               <div class="resume-item">
@@ -297,7 +298,7 @@
           <div class="resume-detail education">
             <h2 class="heading">My <span>Education</span></h2>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. blablablabsljdh ashdoahisfaps sip
+              My educational path reflects a commitment to continuous learning and academic excellence, combining theoretical knowledge with practical applications across different disciplines
             </p>
             <div class="resume-list-education">
               <div class="resume-item">
@@ -333,7 +334,7 @@
           <div class="resume-detail skills">
             <h2 class="heading">My <span>Skills</span></h2>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. blablablabsljdh ashdoahisfaps siap
+              Through both academic projects and hands-on experience, I have cultivated a diverse skill set that spans technical proficiency, creative problem-solving, and interpersonal capabilities
             </p>
             <div class="resume-list">
               <div class="resume-item">
